<resources>
    <string name="app_name">DriveX</string>
    <string name="portrait_orientation">portrait</string>
    <string name="location_permishion_title">"Submit the required permissions"</string>
    <string name="location_permishion_text">“DriveX app collects location data to enable  for the trip route saving function to work correctly, as well as calculating mileage and fuel consumption data, even when the app is closed or not in use.”</string>
    <string name="location_permishion_warning">"Without this permission, DriveX will not be able to record a route"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DriveX</string>
    <string name="nav_header_subtitle">Drive Expense Manager</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="save_date">Save</string>
    <string name="add_check">Attach receipt</string>
    <string name="add_receipt">You can attach photo of the receipt</string>
    <string name="volume">Volume</string>
    <string name="summ">Amount</string>
    <string name="mileage">Mileage</string>
    <string name="date">Date</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_home">My Car</string>
    <string name="menu_car">My car</string>
    <string name="menu_notify">Reminders</string>
    <string name="menu_ride">Trips</string>
    <string name="menu_stat">Statistics</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_info">About the application</string>
    <string name="title_activity_map">Map</string>
    <string name="start_text">Start</string>
    <string name="stop_text">Stop</string>
    <string name="deleted">Delete</string>
    <string name="create_date">Select a date</string>
    <string name="correct_mileage">Enter current mileage</string>
    <string name="value_volume">Enter fuel volume</string>
    <string name="Cost_refuel">Enter the refueling fee</string>
    <string name="add">Add</string>
    <string name="add_pay">Add payment</string>
    <string name="description_pay">Payment purpose</string>
    <string name="stop_driving">Finish trip</string>
    <string name="start_driving">Start trip</string>
    <string name="units">Units</string>
    <string name="volume_settings">volume</string>
    <string name="liter">liters</string>
    <string name="Gallon">Gallons</string>
    <string name="Fuel_consumption">Fuel consumption</string>
    <string name="Notifications_settings">Notifications</string>
    <string name="other_settings">Other</string>
    <string name="pressure_notification">Tire pressure notification</string>
    <string name="Vibration_on_notification">Vibration on notification</string>
    <string name="Currency_selection">Currency selection</string>
    <string name="Distance_selection">Unit of distance</string>
    <string name="launch_sound">launch sound </string>
    <string name="Dark_theme">Dark theme</string>
    <string name="push_notifications">Push notifications</string>
    <string name="country">Country</string>
    <string name="day_notifications">Day of notification</string>
    <string name="value_time_of_notifications">12.00</string>
    <string name="value_date_of_notifications">22</string>
    <string name="time_notification">Time of notification</string>
    <string name="car_model">Car model</string>
    <string name="l_km">liter / 100 km</string>
    <string name="l_mile">liter /100 mile</string>
    <string name="g_km">gallon / 100 km</string>
    <string name="g_mile">gallon /100 mile</string>
    <string name="km">Km.</string>
    <string name="mile">Mil.</string>
    <string name="warning">Warning</string>
    <string name="create_trip">Create</string>
    <string name="create_trip_nothing">You have no recorded trips</string>
    <string name="create_expenses_nothing">You have no recorded expenses</string>
    <string name="add_ride">Trip</string>
    <string name="add_service">Service</string>
    <string name="select_unit_settings">Select the unit of measure</string>
    <string name="selected_general">Selected : </string>
    <string name="cancel_general">Cancel </string>
    <string name="accept_general">Accept </string>
    <string name="general_history">History</string>
    <string name="total_expenses">Total expenses</string>
    <string name="refuel_expenses">Total fuel costs</string>
    <string name="total_fuel_volume">Total fuel volume</string>
    <string name="total_expenses_for_service">Total service costs</string>
    <string name="entry_deleted">Entry deleted</string>
    <string name="welcome_text_home_fragment"> Welcome to Drivex!</string>
    <string name="welcome_text_home_fragment_2"> Click to add information about your vehicle</string>
    <string name="welcome_text_home_fragment_3"> The story is blank. Add an expense to display! </string>
    <string name="add_data_repair">Please add current repair data</string>
    <string name="service">Service</string>
    <string name="add_current_mileage">Please add the current mileage value</string>
    <string name="add_cost_current_repare">Please add the cost of current repairs</string>
    <string name="refuel">Refueling</string>
    <string name="info_about_refuel">Information about the selected refueling:</string>
    <string name="please_add_refuel_data">"Please add the data of the current refueling"</string>
    <string name="your_buy">Buying</string>
    <string name="shopping">Shopping</string>
    <string name="info_of_your_buy">Information about the selected purchase:</string>
    <string name="please_add_info_of_your_buy">Please add information about your purchase</string>
    <string name="payment">Payment</string>
    <string name="payments">Payments</string>
    <string name="payment_info">Information about the selected payment:</string>
    <string name="please_add_payment_info">Please add your payment information:</string>
    <string name="category">Category:</string>
    <string name="please_add_mileage">Please add the current mileage value:</string>
    <string name="please_add_volume_fuel">Please add the fuel filling volume:</string>
    <string name="please_add_cost_fuel">Please state the cost:</string>
    <string name="prepare_desc">Repare description</string>
    <string name="repare_type">Please, select type of rapare</string>
    <string name="reset">Reset</string>
    <string name="apply_filters">Apply filters</string>
    <string name="reset_filters">reset</string>
    <string name="description">Description</string>
    <string name="resave_expenses">Edit and re-save</string>
    <string name="make_new_photo">Make a new photo</string>
    <string name="trip_details">Trip details</string>
    <string name="total_time">Total time</string>
    <string name="avg_speed">Avg speed</string>
    <string name="top_speed">Top speed</string>
    <string name="total_dist">Distance, km</string>
    <string name="city_fuel_consumption">City fuel consumption</string>
    <string name="consumption_off_city">Highway fuel consumption</string>
    <string name="insufficient_data">Insufficient data</string>
    <string name="send_extra_text">This is my ride route / Sent using the DriveX app</string>
    <string name="all_period">all period</string>
    <string name="last_day">day</string>
    <string name="last_week">week</string>
    <string name="last_month"> month</string>
    <string name="last_three_months">3 months</string>
    <string name="last_year">year</string>
    <string name="total_expenses_desc"> Total expenses for </string>
    <string name="payment_costs">Payment costs</string>
    <string name="payment_shopping">Shopping costs</string>
    <string name="service_costs">Service costs</string>
    <string name="fuel_costs">Fuel costs</string>
    <string name="filters">Filters</string>
    <string name="trip_writing">Trip written…</string>
    <string name="info_expense_accounting">Expense accounting</string>
    <string name="info_create_reminders">Create reminders</string>
    <string name="info_recording_routes">Recording routes</string>
    <string name="info_title">DriveX is the financial manager for your car.</string>
    <string name="info_desc1">Find out how much your car is spending on fuel, service, purchases, and payments. In the app, you can see monthly expenses by category, as well as graphical and text display of expenses.</string>
    <string name="info_desc2">DriveX helps in managing reminders for regular car services and expenses, such as service, oil change monitoring, maintenance inspections, car wash reminders, trip reminders, shopping reminders and other categories of reminders.</string>
    <string name="info_desc_3">Stay informed about your journeys. This app allows you to record the route, duration, average speed, and time of each of your trips, and save this data in your trip history.</string>
    <string name="year">Year</string>
    <string name="Month">Month</string>
    <string name="what_remind">What can I remind you of?</string>
    <string name="plan_Repair">Repair</string>
    <string name="Trip">Trip</string>
    <string name="car_wash">Car Wash</string>
    <string name="tire_fitting">Tire fitting</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="insurance">Insurance</string>
    <string name="renew_the_license">Renew license</string>
    <string name="oil_change">Oil change</string>
    <string name="tech_Inspection">Tech inspection</string>
    <string name="other">Other</string>
    <string name="reminderGeneral"> Reminder</string>
    <string name="add_detail_reminder">Add reminder details</string>
    <string name="dateOfReminder">Select reminder date</string>
    <string name="timeOfReminder">Select reminder time</string>
    <string name="creationReminder">Created reminder</string>
    <string name="continieReminder">Continue without reminder description?</string>
    <string name="emptyDescriptionOfReminder">You did not fill in a description for reminder. Create notification without a description, or add details? </string>
    <string name="enterDescriptionOfReminder">Enter a description for the reminder</string>
    <string name="time">time in road:</string>
    <string-array name="filter_options">
        <item>Sort by date</item>
        <item>Sort by duration</item>
        <item>Sort by distance</item>
    </string-array>
    <string-array name="maintenance_options">
        <item>Tire fitting</item>
        <item>Car wash</item>.
        <item>Engine oil change</item>
        <item>Changing the air filter</item>
        <item>Oil filter replacement</item>
        <item>Salt filter replacement</item>
        <item>Fuel filter replacement</item>.
        <item>Brake fluid replacement </item>
        <item>Front brake pad replacement </item>
        <item>Rear brake pad replacement</item>
        <item>Replacing the front brake discs</item>
        <item>Rear brake discs replacement</item>
        <item>Change spark plugs</item>
        <item>Changing the high-voltage wires </item>
        <item>Charter coil replacement </item>.
        <item>Air Conditioner Filling </item>
        <item>Coolant replacement </item>.
        <item>Clearance </item>.
        <item>Suspension maintenance </item>.
        <item>Engine belt replacement</item>
        <item>Battery replacement</item>.
        <item>Changing hydraulic booster fluid</item>
        <item>Transmission maintenance</item>.
        <item>Engine maintenance</item>
        <item>Service of the fuel system </item>
        <item>steering service </item>.
        <item>Other</item>
    </string-array>
</resources>