<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/ic_car"
            android:title="@string/menu_car" />
        <item
            android:id="@+id/nav_notify"
            android:icon="@drawable/ic_warning"
            android:title="@string/menu_notify" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_ride" />
        <item
            android:id="@+id/nav_stat"
            android:icon="@drawable/ic_stats"
            android:title="@string/menu_stat" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_help"
            android:title="@string/menu_info" />



    </group>
</menu>